# humachinate

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
document/doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
document/doctrees/api/: humachinate.doctree  modules.doctree
document/html/: .buildinfo  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
document/html/_modules/: index.html
document/html/_modules/humachinate/: skeleton.html
document/html/_sources/api/: humachinate.rst.txt  modules.rst.txt
document/html/_static/: documentation_options.js
document/html/api/: humachinate.html  modules.html
src/humachinate/: __init__.py  base.py  browsers.py  skeleton.py  standalone.py
tests/: conftest.py  test_humachinate.py  test_skeleton.py
